font size fixes, post grid container adjustments from some visual display issues with alignwide in frnot and alignwide in back

--- a/src/blocks/block-grid-container/styles/style.scss
+++ b/src/blocks/block-grid-container/styles/style.scss
@@ -268,10 +268,7 @@
 	}
 
 	.c9-grid .container.alignwide {
-		margin-top: 0px;
-		margin-bottom: 0px;
-		margin-left: calc((-100vw + 100%) / 4);
-		margin-right: calc((-100vw + 100%) / 2);
+		margin: 0px auto;
 		padding: 0px;
 	}
 
@@ -292,11 +289,8 @@
 	.page-template-default .entry-content>.c9-grid .container.alignwide {
 		padding-left: 5px;
 		padding-right: 5px;
-	}
-
-	.page-template-default .entry-content>.c9-grid .container.alignwide {
 		width: 100%;
-		max-width: 1200px;
+		max-width: 1260px;
 	}
 
 	.page-template-default .entry-content>.c9-grid .container-fluid {
