--- a/src/blocks/block-horizontal-tabs/styles/style.scss
+++ b/src/blocks/block-horizontal-tabs/styles/style.scss
@@ -18,7 +18,7 @@
 	border-radius: 0px;
 	color: #979797;
 	text-transform: uppercase;
-	font-size: 1.5em;
+	font-size: 16px;
 	padding: 13px 35px;
 	font-weight: 700;
 	letter-spacing: .09em;
@@ -37,7 +37,7 @@
 	}
 
 	.c9-horizontal-tabs>.nav.nav-tabs .nav-link {
-		font-size: 1.2em;
+		font-size: 12px;
 
 	}
 }
