--- a/src/blocks/block-posts-grid/styles/style.scss
+++ b/src/blocks/block-posts-grid/styles/style.scss
@@ -257,9 +257,6 @@
 	.page-template-default .entry-content>.c9-posts-grid .container.alignwide {
 		padding-left: 5px;
 		padding-right: 5px;
-	}
-
-	.page-template-default .entry-content>.c9-posts-grid .container.alignwide {
 		width: 100%;
 		max-width: 1260px;
 	}
