--- a/src/blocks/block-sharing/styles/style.scss
+++ b/src/blocks/block-sharing/styles/style.scss
@@ -128,7 +128,7 @@
 
 	&.c9-share-size-medium {
 		a {
-			font-size: 1.6em;
+			font-size: 16px;
 			min-width: 48px;
 			min-height: 48px;
 		}
@@ -144,7 +144,7 @@
 
 	&.c9-share-size-large.c9-share-icon-only {
 		a {
-			font-size: 2.6em;
+			font-size: 26px;
 			min-width: 55px;
 			min-height: 55px;
 		}
